Added mismatches.py, and its translations, to create graph of mismatches between the cue and the correct memory.

--- a/locale/es/LC_MESSAGES/ame.po
+++ b/locale/es/LC_MESSAGES/ame.po
@@ -83,6 +83,10 @@ msgstr "Valores"
 msgid "Percentage of memory corpus"
 msgstr "Porcentaje del corpus de la memoria"
 
+# mistmatches.py
+msgid "Mismatches"
+msgstr "Discrepancias"
+
 #, fuzzy
 #~| msgid "-english"
 #~ msgid "english"
